--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,16 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
 
-{% block content %}
-    <h1>{% block title %} Welcome to FlaskBlog {% endblock %}</h1>
-{% endblock %}
+<html lang="en">
+    <head>
+    <link rel="stylesheet" href="static/css/style.css">
+    </head>
+
+    <body>
+        <div class="toplevel">
+            <div class="char_wheels" id="char_wheels">+</div>
+            <div class="bottom_row" id="bottom_row">-</div>
+
+
+        </div>
+    </body>
+</html>
