--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,50 @@
 
 <html lang="en">
     <head>
+    <!-- bootstrap default config -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- local styles -->
     <link rel="stylesheet" href="static/css/style.css">
     </head>
 
     <body>
-        <div class="toplevel">
-            <div class="char_wheels" id="char_wheels">+</div>
-            <div class="bottom_row" id="bottom_row">-</div>
-
+        <div class="container-fluid">
+            <div class="row char_space">
+                <div class="col-xs-12 col-sm-12">
+                    <!-- put a panel in here so that the edges are rounded and easier to control -->
+                    this is where all the character content will go
+                </div>
+            </div>
+            <div class="row bottom_row">
+                <!-- this 11 width div is padding for possible future use -->
+                <div class="col-xs-11 col-sm-11"></div>
+                <div class="col-xs-1 col-sm-1 char_btn">
+                    <button type="button" class="btn add_char">+</button>
+                </div>
+            </div>
 
         </div>
     </body>
 </html>
+
+<!--
+    ** wrap all elements in bootstrap collapsible to allow hiding (use .in to make it show by default)
+        -> maybe use a panel-group to create a nested collapsible list
+    maybe bootstrap panel as parent of character sheet space 
+    maybe bootstrap grid to organize whole page
+    use bootstrap wells/panels to outline character sheet
+    
+    use bootstrap table to contain inventory items
+    use bootstrap button (probably small) for character addition
+        -> nesting bootstrap buttons creates dropdown menus
+        -> there is also a bootstrap dropup class
+
+    use bootstrap progress bar for xp tracking
+
+    use bootstrap input for inventory items (maybe?)
+    use bootstrap modal to add new items (for now?)
+
+    -->
