--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,31 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
 
-<html lang="en">
-    <head>
-    <!-- bootstrap default config -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{% block head %}
 
-    <!-- local styles -->
-    <link rel="stylesheet" href="static/css/style.css">
-    </head>
+{% endblock %}
 
-    <body>
-        <div class="container-fluid">
-            <div class="row char_space">
-                <div class="col-xs-12 col-sm-12">
-                    <!-- put a panel in here so that the edges are rounded and easier to control -->
-                    this is where all the character content will go
-                </div>
+{% block body %}
+<div class="container-fluid">
+    <div class="row char_space">
+        <div class="col-xs-12 col-sm-12">
+            <div class="panel">
+                this is where all the character content will go
             </div>
-            <div class="row bottom_row">
-                <!-- this 11 width div is padding for possible future use -->
-                <div class="col-xs-11 col-sm-11"></div>
-                <div class="col-xs-1 col-sm-1 char_btn">
-                    <button type="button" class="btn add_char">+</button>
-                </div>
-            </div>
-
+            
         </div>
-    </body>
-</html>
+    </div>
+    <div class="row bottom_row">
+        <!-- this 11 width div is padding for possible future use -->
+        <div class="col-xs-11 col-sm-11"></div>
+        <div class="col-xs-1 col-sm-1 char_btn">
+            <form action="/acs" method="post">
+            <button type="submit" name="add_char" class="btn float-right add_char">+</button>
+            </form>
+        </div>
+    </div>
+
+</div>
+{% endblock %}
 
 <!--
     ** wrap all elements in bootstrap collapsible to allow hiding (use .in to make it show by default)
